# Parallax-ESP32

./: CMakeLists.txt  Kconfig.projbuild  Parallax-ESP32.c  README.md  captdns.c  cmds.c  cmds.h  config.c  config.h  discovery.c  discovery.h  httpd.c  httpd.h  json.c  json.h  main.c  parser.c  parser.h  proploader.c  proploader.h  serbridge.c  serbridge.h  settings.c  settings.h  status.c  status.h  upload_script.html  wifi.c  wifi.h
html/: Directory.html  Files.html  Lists.css  Test2.html  console.js  index.html  log.html  newpage.html  settings.html  style.css  test.html  ui.js  update-ffs.html
html/flash/: index.html
html/theme/: Lists.css
html/websocket/: index.html
html/wifi/: connecting.html  style.css  wifi.html
